# cpro-proofreader

./: .env.example  .env.template  .gitignore  ASSISTANT_ID_MANAGEMENT.md  CHINESE_NUMBER_PROTECTION_SUMMARY.md  CITATIONS_REMOVED_FINAL.md  DOCX_TABLE_IMPROVEMENTS.md  FINAL_IMPLEMENTATION_SUMMARY.md  JSON_PARSING_FIX_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SECOND_RUN_IMPROVEMENT_SUMMARY.md  TRACK_CHANGES_FIX_SUMMARY.md  admin_routes.py  azure-openai-structured-outputs-python-guide.md  chinese_assistant_config.json  config.py  debug_filtering.py  demo_number_protection.py  document_structure.xml  english_assistant_config.json  main.py  pyproject.toml  run_service.sh  simple_ai_spacing.py  start.sh  text_preprocessor.py  utils.py  validators.py  word_revisions.py
static/: index.html  script.js  styles.css  test_citations.html
static/style/: tokens.css
styling_guides/: CPRO_Chinese_style_guide_chunks.md  CPRO_English_style_guide_chunks.md  cpro_chinese_usage_mapping.json
